[project]
name = "e2e-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "TF Authors",email = "hunter@hfernandes.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = '>=3.11,<4.0'
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[project.scripts]
e2e-tool = "e2e_framework.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
