[project]
name = "mathprovider"
version = "0.1.0"
description = ""
authors = [
    {name = "TF Authors",email = "hunter@hfernandes.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = '>=3.11,<4.0'
dependencies = []

[project.scripts]
terraform-provider-math = "mathprovider.provider:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
tf = {develop = true, path = "../..", extras = ["dev"]}
e2e_framework = {develop = true, path = "../e2e_framework"}
